--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "lint": "eslint packages/*/src/**/*.ts",
     "typecheck": "tsc --build"
   },
+  "devDependencies": {
+    "typescript": "^5.5.0",
+    "@types/node": "^20.0.0"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
