--- a/packages/network-adapters/package.json
+++ b/packages/network-adapters/package.json
@@ -9,6 +9,8 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@crossborder/core": "*"
+    "@crossborder/core": "*",
+    "ethers": "^6.13.0",
+    "stripe": "^17.0.0"
   }
 }
