--- a/packages/api-gateway/package.json
+++ b/packages/api-gateway/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn src/index.ts",
@@ -10,6 +11,13 @@
   },
   "dependencies": {
     "@crossborder/core": "*",
-    "@crossborder/network-adapters": "*"
+    "@crossborder/network-adapters": "*",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
