--- a/packages/webhook-service/package.json
+++ b/packages/webhook-service/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@crossborder/core": "*"
+    "@crossborder/core": "*",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
+    "typescript": "^5.3.2"
   }
 }
