--- a/packages/demo-app/package.json
+++ b/packages/demo-app/package.json
@@ -2,12 +2,16 @@
   "name": "@crossborder/demo-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@crossborder/sdk": "*"
+    "@crossborder/sdk": "*",
+    "@inquirer/prompts": "^7.0.0",
+    "chalk": "^5.3.0",
+    "ora": "^8.0.0"
   }
 }
