--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
   "scripts": {
     "build": "npm run build --workspaces",
     "dev": "npm run dev --workspaces --if-present",
-    "test": "npm run test --workspaces --if-present",
-    "lint": "eslint packages/*/src/**/*.ts",
-    "typecheck": "tsc --build"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:unit": "npm test -- --testPathPattern=tests/unit",
+    "test:integration": "npm test -- --testPathPattern=tests/integration",
+    "test:e2e": "npm test -- --testPathPattern=tests/e2e",
+    "test:coverage": "npm test -- --coverage",
+    "lint": "eslint 'packages/*/src/**/*.ts'",
+    "lint:fix": "eslint 'packages/*/src/**/*.ts' --fix",
+    "typecheck": "tsc --build",
+    "demo": "node packages/demo-app/dist/index.js"
   },
   "devDependencies": {
     "typescript": "^5.5.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "supertest": "^6.3.0",
+    "@types/supertest": "^2.0.0",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
